[package]
name = "api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# mongodb = "0.9.2"
[dependencies]


axum = "0.4.0"
hyper = { version = "0.14.11", features = ["full"] }
tokio = {version = "1.9.0", features = ["full"]}
tower = {version = "0.4.8", features = ["full"]}
tower-http = { version = "0.2.0", features = ["cors"] }
tokio-stream = "0.1.7"
async-session = "3.0.0"
http = "0.2.4"
serde = "1.0.127"
chrono = "0.4.19"
rand = "0.8.4"
serde_json = "1.0.72"


